--- a/fcc.cabal
+++ b/fcc.cabal
@@ -24,15 +24,24 @@ executable fcc
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:    AST
+                      Parser
+                      TypeSystem
+                      Pretty
+                      Eval
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.15.0.0,
+    build-depends:    base, 
                       text,
+                      pretty,
                       pretty-simple,
                       parser-combinators,
+                      containers,
+                      mtl,
+                      transformers,
                       megaparsec
 
     hs-source-dirs:   app
     default-language: Haskell2010
+    ghc-options: -Wall 
